[package]
name = "tungstenite_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
# init stuff
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
strum={ version= "0.25.0", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
strum_macros = "0.25.1"


#tokio = {version="1.29.1", features=["rt-multi-thread", "sync", "rt", "time", "macros"  ]}
tungstenite = "0.20.0"
url = "2.4.0"
crossbeam-channel = "0.5.8"


